--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,19 @@ header {
     width: 320px;
     font-size: 21px;
 }
+.list li {
+    cursor: pointer;
+    padding: 5px 5px 5px 5px;
+}
+.list li:hover {
+    background-color: rgb(0, 191, 255);
+    color: #fff;
+    transition: 0.5s;
+    border-radius: 10px;
+}
 .cartImg {
     width: 50px;
+    cursor: pointer;
 }
 .sidebarList {
     width: 250px;
@@ -42,13 +53,24 @@ header {
     opacity: 0.3;
 }
 .sidebarList li {
+    padding: 5px 5px 5px 5px;
     padding-left: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.sidebarList li:hover {
+    background-color: rgb(0, 191, 255);
+    color: #fff;
+    transition: 0.5s;
 }
 .cardDiv {
     width: 290px;
     height: 395px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+}
+.cardDiv:hover {
+    box-shadow: 0 0 10px 1px;
 }
 .imgBlock {
     width: 250px;
@@ -72,6 +94,13 @@ header {
     background-color: rgb(0, 191, 255);
     color: #fff;
     font-size: 18px;
+}
+.buyBtn:hover {
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    color: rgb(0, 191, 255);
+    box-shadow: 0 0 4px 1px;
+    cursor: pointer;
 }
 .mainSection {
     display: flex;
