--- a/src/style.css
+++ b/src/style.css
@@ -118,3 +118,8 @@ header {
     width: 950px;
     margin-bottom: 20px;
 }
+.oldPrice {
+    opacity: 0.3;
+    font-size: 14px;
+    margin-left: 10px;
+}
