--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ header {
 }
 .list li:hover {
     background-color: rgb(0, 191, 255);
+    opacity: 0.4;
     color: #fff;
     transition: 0.5s;
     border-radius: 10px;
@@ -60,6 +61,7 @@ header {
 }
 .sidebarList li:hover {
     background-color: rgb(0, 191, 255);
+    opacity: 0.4;
     color: #fff;
     transition: 0.5s;
 }
